--- a/security.html
+++ b/security.html
@@ -39,6 +39,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/shapesecurity/08d6e0e6-1627-4280-a639-2f3036fdc01a'>Shape Security - Senior Security Solutions Engineer</a></h5> 
+<p><span class="badge badge-light">Toronto</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/datto/jobs/1939844'>Job Application for Application Security - Penetration Testing Engineer at Datto Inc.</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
@@ -87,7 +91,7 @@
 <p><span class="badge badge-light">Reston, Virginia  Reston, VA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/liferay/job/ogUrbfww'>Liferay, Inc. Careers - Information Security Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/liferay/job/ogUrbfww'>Liferay, Inc. Careers - Information Security Analyst</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -105,7 +109,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://amswh.avature.net/careers/JobDetail/Network-Security-Engineer/17176'>Network & Security Engineer - External Careers</a></h5> 
+<h5><a href='https://amswh.avature.net/careers/JobDetail/Network-Security-Engineer/17176'>Network & Security Engineer - External Careers</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -151,7 +155,7 @@
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/dae/jobs/mobility-security-engineer-dQVbvm9N4r6yGMaKiznY58'>Mobility Security Engineer #0572 job at Stratus Solutions in Arlington, VA, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/dae/jobs/mobility-security-engineer-dQVbvm9N4r6yGMaKiznY58'>Mobility Security Engineer #0572 job at Stratus Solutions in Arlington, VA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Arlington, VAArlington, VA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -273,7 +277,7 @@
 <p><span class="badge badge-light">Tokyo</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/WabashValleyPowerAlliance/743999698522561-senior-cyber-security-analyst'>Wabash Valley Power Alliance Senior Cyber Security Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/WabashValleyPowerAlliance/743999698522561-senior-cyber-security-analyst'>Wabash Valley Power Alliance Senior Cyber Security Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Indianapolis, IN Indianapolis, Indiana</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -334,7 +338,7 @@ tools and services; Work closely with developers to give advice on secure?...</p
 <p><span class="badge badge-light">Edinburgh</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bah.wd1.myworkdayjobs.com/BAH_Jobs/job/USA-CA-San-Diego-4055-Hancock-St/Cybersecurity-Engineer--Junior_R0071292'>Cybersecurity Engineer, Junior</a></h5> 
+<h5><a href='https://bah.wd1.myworkdayjobs.com/BAH_Jobs/job/USA-CA-San-Diego-4055-Hancock-St/Cybersecurity-Engineer--Junior_R0071292'>Cybersecurity Engineer, Junior</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Cybersecurity Engineer, Junior. The Challenge: Everyone knows security needs 
 to be ?baked in? to a system architecture, but you actually know how to bake it in?...</p>
@@ -343,7 +347,7 @@ to be ?baked in? to a system architecture, but you actually know how to bake it 
 <p><span class="badge badge-light">D?sseldorf, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MindPointGroupLLC/743999698281929-security-engineer'>MindPoint Group, LLC Security Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/MindPointGroupLLC/743999698281929-security-engineer'>MindPoint Group, LLC Security Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -407,7 +411,7 @@ to be ?baked in? to a system architecture, but you actually know how to bake it 
 <p><span class="badge badge-light">Orlando, FL, USA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://west4thstrategy.applytojob.com/apply/VD9A4J8CeX/Cloud-Security-Engineer-Architect'>Cloud Security Engineer / Architect - West 4th Strategy - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://west4thstrategy.applytojob.com/apply/VD9A4J8CeX/Cloud-Security-Engineer-Architect'>Cloud Security Engineer / Architect - West 4th Strategy - Career Page</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -415,7 +419,7 @@ to be ?baked in? to a system architecture, but you actually know how to bake it 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Anitian/743999698408740-security-operations-soc-analyst-1'>Anitian  Security Operations (SOC) Analyst 1 | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Anitian/743999698408740-security-operations-soc-analyst-1'>Anitian  Security Operations (SOC) Analyst 1 | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Portland, OR</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -439,15 +443,10 @@ to be ?baked in? to a system architecture, but you actually know how to bake it 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/wavestrong/j/6F90121359/'>Sr. Security Engineer (Symantec / Blue Coat ProxySG) - WaveStrong</a></h5> 
+<h5><a href='https://apply.workable.com/wavestrong/j/6F90121359/'>Sr. Security Engineer (Symantec / Blue Coat ProxySG) - WaveStrong</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Description. Exciting Sr. Security Engineer (Symantec / Blue Coat ProxySG), 12 
 months contract Bloomington, IL. Requirements. Primary responsibilities will?...</p>
-<hr/>
-<h5><a href='https://apply.workable.com/zup/j/45274230A7/'>Security Engineer - Blue Team - Zup Innovation</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>16 Out 2019 ... Quem somos?A Zup desenvolve produtos digitais disruptivos que impactam a 
-vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <hr/>
 
 
