--- a/software.html
+++ b/software.html
@@ -39,7 +39,11 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='http://sparkcognition.applytojob.com/apply/WJtXUDOzHZ/Software-Engineer'>Software Engineer - SparkCognition - Career Page</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AccoladeInc/743999698625073-software-engineer-iii-back-end-java-aws-'>Accolade, Inc. Software Engineer III (Back-End - Java & AWS) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://sparkcognition.applytojob.com/apply/WJtXUDOzHZ/Software-Engineer'>Software Engineer - SparkCognition - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -181,7 +185,7 @@
 <p><span class="badge badge-light">Hunt Valley, Maryland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://unearthlabs.recruiterbox.com/jobs/fk0mcos'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://unearthlabs.recruiterbox.com/jobs/fk0mcos'>
     Mobile Software Engineer - android at Unearth
 </a></h5> 
 <p><span class="badge badge-light">Seattle, Washington</span></p>
@@ -203,11 +207,11 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TechnologyNavigators/743999698617351-software-engineer-c-net-angular-web-api'>Technology Navigators Software Engineer - C#/.NET, Angular, Web API | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TechnologyNavigators/743999698617351-software-engineer-c-net-angular-web-api'>Technology Navigators Software Engineer - C#/.NET, Angular, Web API | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Houston, Texas United States  Austin</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999698616438-senior-software-engineer-continuous-integration-infrastructure'>Square Senior Software Engineer, Continuous Integration Infrastructure | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Square/743999698616438-senior-software-engineer-continuous-integration-infrastructure'>Square Senior Software Engineer, Continuous Integration Infrastructure | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Atlanta United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -231,7 +235,7 @@
 <p><span class="badge badge-light">Salt Lake City, Utah  Salt Lake City, Utah</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.orizon.de/de/job/software-engineer-edrs-m-f-d-ottobrunn-11994'>Software Engineer EDRS (m/f/d) in Ottobrunn - Orizon GmbH</a></h5> 
+<h5><a href='https://www.orizon.de/de/job/software-engineer-edrs-m-f-d-ottobrunn-11994'>Software Engineer EDRS (m/f/d) in Ottobrunn - Orizon GmbH</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -255,7 +259,7 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/uniteus/jobs/4325466002'>Job Application for Senior Software Engineer at Unite Us</a></h5> 
+<h5><a href='https://boards.greenhouse.io/uniteus/jobs/4325466002'>Job Application for Senior Software Engineer at Unite Us</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -307,7 +311,7 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/kalo/7c755ccd-9177-4388-b035-c3057604fa3b'>Kalo - Senior Mobile Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kalo/7c755ccd-9177-4388-b035-c3057604fa3b'>Kalo - Senior Mobile Software Engineer</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -315,7 +319,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/auth0/b9928c33-e285-4a4f-aef4-d4d5198d166d'>Auth0 - Full Stack Software Engineer, Service Management - CS Engineering</a></h5> 
+<h5><a href='https://jobs.lever.co/auth0/b9928c33-e285-4a4f-aef4-d4d5198d166d'>Auth0 - Full Stack Software Engineer, Service Management - CS Engineering</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -347,7 +351,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qGjaVfwO&k=Job&j=oxvkbfwh&__jvst=Employee+Referral&__jvsd=s2B1Pgwe&__jvsc=Twitter&bid=njxVpMwr'>Spectra Logic Careers - Software Engineer / Developer - (Golang)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qGjaVfwO&k=Job&j=oxvkbfwh&__jvst=Employee+Referral&__jvsd=s2B1Pgwe&__jvsc=Twitter&bid=njxVpMwr'>Spectra Logic Careers - Software Engineer / Developer - (Golang)</a></h5> 
 <p><span class="badge badge-light">Boulder, Colorado  Boulder, Colorado</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -423,11 +427,11 @@
 <p><span class="badge badge-light">San Francisco Los Angeles</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698597135-software-engineer-java-jr1008843-'>Broadridge Software Engineer (Java) (JR1008843) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698597135-software-engineer-java-jr1008843-'>Broadridge Software Engineer (Java) (JR1008843) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Kansas City, MO</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Nextech1/743999698596913-software-engineer-iii-nextech-select'>Nextech Software Engineer III -  Nextech Select | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Nextech1/743999698596913-software-engineer-iii-nextech-select'>Nextech Software Engineer III -  Nextech Select | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Tampa, FL Tampa, FL</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -438,10 +442,6 @@
 <h5><a href='https://jobs.jobvite.com/loandepot/job/oOFQafwd'>loanDepot Careers - Sr. Full Stack Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIdaVfwK&k=Job&j=osxDafww&__jvst=Employee&__jvsd=s8vU5hwo&__jvsc=Twitter&bid=nMsMpMwG'>Samsung Semiconductor, Inc. Careers - Advanced Neural Processor Lab - Deep Learning Sr Software Engineer</a></h5> 
-<p><span class="badge badge-light">San Jose, California</span></p>
-<p>Posted on:: 2019-10-31</p>
 <hr/>
 
 
